--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.7",
-    "@supabase/supabase-js": "^2.38.4",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@supabase/supabase-js": "^2.46.0",
     "expo": "^51.0.38",
     "expo-constants": "~16.0.1",
     "expo-linking": "~6.3.1",
